fix: Edit product variation api and docs file.
